tests/checker/fail/ambiguous_http_entry.can
about = (Request) -> Response {
    Response(Body("") * Headers() * Status(200))
}

home = (Request) -> Response {
    Response(Body("") * Headers() * Status(200))
}
